--- a/TODO.txt
+++ b/TODO.txt
@@ -2,17 +2,13 @@ client/simult_sim
   SPEC:
     SimulationStateFactory
     UserEventSerializer
-    Simulation
-      turn mgmt
-      TurnComplete - checksum calc & send via closure
 
   SRC:
     SimulationStateSerializer
       packSimulationState
       unpackSimulationState
       calcWorldChecksum
-    TurnCalculator
-      advanceTurn
+    UserEventSerializer
 
       
 
